fixed issue with too wide text selection in Chrome

--- a/resources/styles/views/_workspace.scss
+++ b/resources/styles/views/_workspace.scss
@@ -11,6 +11,8 @@
         margin-top: 20px;
         margin-bottom: 20px;
 
+        // we need this to limit text selection in Chrome
+        position: relative;
 
         &:first-child {
             margin-top: 0;
